43) kernel: usb: xhci: allocate correct amount of scratchpad buffers.<br>
44) kernel: usb: xhci: fix reporting of 0-sized URBs in control endpoint.<br>
45) kernel: usb: xhci: handle Config Error Change (CEC) in xhci driver.<br>
46) kernel: netfilter: nf_nat_h323: fix crash in nf_ct_unlink_expect_report().<br>
47) kernel: netfilter: nf_ct_sip: extend RCU read lock in set_expected_rtp_rtcp().<br>
48) kernel: netfilter: xt_socket: fix a stack corruption bug.<br>
49) kernel: netfilter: nf_ct_sip: support Cisco 7941/7945 IP phones.<br>
50) kernel: net: pppoe: drop pppoe device in pppoe_unbind_sock_work.<br>
51) kernel: net: ipt_accounting portted to 3.4 kernel.<br>
52) kernel: net: sysctl_net_core: check SNDBUF and RCVBUF for min length.<br>
53) kernel: net: tcp: update reordering first before detecting loss.<br>
54) kernel: net: tcp: set SOCK_NOSPACE under memory pressure.<br>
55) kernel: net: ipv4: kill ip_rt_frag_needed().<br>
56) kernel: net: ipv4: icmp: fix PMTU handling for rare case.<br>
57) kernel: net: ipv4: remove unnecessary code from rt_check_expire().<br>
58) kernel: net: ipv4: route: fix sending IGMP messages with link address.<br>
59) kernel: net: ipv4/6: handle PMTU in all ICMP error handlers.<br>
60) kernel: net: ipv6: introduce ip6_rt_put().<br>
61) kernel: net: ipv6: stop /128 route from disappearing after pmtu update.<br>
62) kernel: net: ipv6: check RTF_LOCAL on rt->rt6i_flags instead of rt->dst.flags.<br>
63) kernel: net: sit: always notify change when params are updated.<br>
64) kernel: net: sit: generate icmpv6 error when receiving icmpv4 error.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~80%).<br>
2) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
3) need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
<br>
<br>
<br>